testdata/baselines/reference/submodule/conformance/inferringClassMembersFromAssignments3.errors.txt
a.js(6,23): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (1 errors) ====
    class Base {
        constructor() {
            this.p = 1
        }
    }
    class Derived extends Base {
                          ~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        m() {
            this.p = 1
        }
    }
    